changes in the server, and login for the frontend
