# routes/auth-routes.js
@@ -3,13 +3,23 @@ const passport = require("passport");
 const jwt = require("jsonwebtoken");
 const router = express.Router();
 
-router.get("/google", passport.authenticate("google", { scope: ["profile", "email"] }));
 
-router.get("/google/callback", 
+router.get("/google", (req, res, next) => {
+  const redirect = req.query.redirect || "/new-world/dashboard/";
+  req.session.redirectTo = redirect;
+  next();
+}, passport.authenticate("google", { scope: ["profile", "email"] }));
+
+router.get("/google/callback",
   passport.authenticate("google", { failureRedirect: "/" }),
   (req, res) => {
-    const token = jwt.sign({ userId: req.user._id }, process.env.JWT_SECRET, { expiresIn: "1h" });
-    res.redirect(`https://writers.wild-fantasy.com/new-world/dashboard/?token=${token}`);
+    const token = jwt.sign({ userId: req.user._id }, process.env.JWT_SECRET, { expiresIn: "3h" });
+
+    const redirectPath = req.session.redirectTo || "/new-world/dashboard/";
+
+    const redirectUrl = `https://writers.wild-fantasy.com${redirectPath}?token=${token}`;
+
+    res.redirect(redirectUrl);
   }
 );
 
